--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
+@layer base {
+    html {
+        font-family: Proxima Nova, system-ui, sans-serif;
+    }
+}
+
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
